# spade-algorithm

./: .gitignore  CMakeLists.txt  MED SPADE Wojciech Sitek.pptx  file.txt  file_python.txt  main.cpp  spade_test.py
include/: Client.h  Item.h  SpadeAlgorithm.h  SpadeSequence.h  SpadeSubseq.h  Tidlist.h  Transaction.h
src/: Client.cpp  Item.cpp  SpadeAlgorithm.cpp  SpadeSequence.cpp  SpadeSubseq.cpp  Tidlist.cpp  Transaction.cpp
